infra/sovereign-k8s/15.ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sovereign-ingress
  namespace: sovereign-chain
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to true if TLS is configured
spec:
  rules:
    - host: sovereign.majedurnitol.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: envoy-gateway
                port:
                  number: 8080
          - path: /explorer
            pathType: Prefix
            backend:
              service:
                name: explorer-frontend
                port:
                  number: 3000
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /faucet
            pathType: Prefix
            backend:
              service:
                name: faucet-service
                port:
                  number: 8000
